@@ -1,3 +1,11 @@
+2004-12-31  Michael Koch  <konqueror@gmx.de>
+
+	* javax/swing/JRootPane.java
+	(setMenuBar): Added @deprecated tag.
+	(getMenuBar): Likewise.
+	* javax/swing/JTable.java
+	(sizeColumnsToFit): Likewise.
+
 2004-12-30  Paul Jenner  <psj.home@ntlworld.com>
 
 	* javax/swing/ImageIcon.java (setImage): Implemented.
